--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,15 @@
   .header.header-sticky {
     box-shadow: 0.1px 0.1px 5px rgb(220, 220, 220);
   }
+
+  .px-3 {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+
+  .container-lg {
+    max-width: none !important;
+  }
 </style>
 
 <body class="mat-typography">
